      possibly optional portions of debian/rules.  (Closes: #537607)
    + [RA] Don't warn about missing build dependencies for commands in
      possibly optional portions of debian/rules.  (Closes: #537608)
  * checks/description:
    + [RA] Decode descriptions from UTF-8 before checking length.  Thanks,
      Charles Plessy.  (Closes: #537207)
  * checks/fields{,.desc}:
    + [FL] packages named lib*-camlp4-dev should be in section ocaml
    + [RA] Move debian/rules parsing to check build dependencies to
      checks/rules.
    + [RA] Allow any package to be in section oldlibs without triggering
      warnings.  Thanks, Rene Engelhard.  (Closes: #537606)
    + [RA] Lower wrong-section-according-to-package-name to possible.
    + [RA] Recognize packages as metapackages even if they contain Lintian
      overrides, thus fixing two packages that added a Lintian override
      for having dependencies only permitted for metapackages, which in
      turn ensures that they keep getting that tag.
    + [RA] Recognize packages as metapackages even if they contain files
      in /usr/share/cdd.
    + [RA] Renamed the tags for depending or build-depending on X
      metapackages to make them generic and load the list of metapackages
      from data/fields/metapackages.  Always consider known metapackages
      to be metapackages for the dependency check.
    + [RA] Don't require a tilde after lp: in bzr URLs.  Thanks, Benjamin
      Drung.  (Closes: #541143)
  * checks/files{,.desc}:
    + [CW] /var/lock and /var/run are not temporary filesystems in d-i, so
      don't emit errors about their use in udebs.
    + [RA] Warn about packages containing files in /etc/ld.so.conf.d that
      don't appear to be part of libc.  Policy 3.8.3 no longer permits
      modification of ld.so.conf.
    + [RA] Remove the check for x11-common pre-depends before installing
      files in /usr/{include,lib}/X11.  Policy 3.8.3 removes this
      requirement.
  * checks/infofiles{,.desc}: