@@ -85,3 +85,13 @@ Description: test package with UTF-8 description (“héhé”“héhé”“hé
  This is a test package designed to exercise some feature or tag of
  Lintian.  It is part of the Lintian test suite and may do very odd
  things.  It should not be installed like a regular package.
+
+Package: {$srcpkg}-not-dup
+Architecture: {$architecture}
+Depends: $\{shlibs:Depends\}, $\{misc:Depends\}
+Description: test package with duplicated words that aren't
+ Lossless JPEG is defined in ITU-T T.81, ISO/IEC IS 10918-1.
+ .
+ This is a test package designed to exercise some feature or tag of
+ Lintian.  It is part of the Lintian test suite and may do very odd
+ things.  It should not be installed like a regular package.
